--- a/day1/Cargo.toml
+++ b/day1/Cargo.toml
@@ -1,11 +1,8 @@
-[workspace]
-members = ["day1"]
 [package]
-name = "advent-of-code-2015"
+name = "day1"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-day1 = { path = "./day1" }
