--- a/day2/Cargo.toml
+++ b/day2/Cargo.toml
@@ -1,12 +1,8 @@
-[workspace]
-members = ["day1", "day2"]
 [package]
-name = "advent-of-code-2015"
+name = "day2"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-day1 = { path = "./day1" }
-day2 = { path = "./day2" }
